[gd_scene load_steps=10 format=2]

[ext_resource path="res://game/scenes/actors/LockedBlock.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/scripts/actors/HarmfulBlock.gd" type="Script" id=2]
[ext_resource path="res://game/resources/sprites/harmblock.png" type="Texture" id=3]
[ext_resource path="res://game/resources/sounds/shatter.mp3" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.92268, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 10.0
scale_curve = SubResource( 5 )
color = Color( 1, 0, 0, 1 )

[node name="HarmfulBlock" instance=ExtResource( 1 )]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" parent="." index="0"]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="HarmfulArea" type="Area2D" parent="." index="2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HarmfulArea" index="0"]
shape = SubResource( 1 )

[node name="FriendLockArea" type="Area2D" parent="." index="3"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FriendLockArea" index="0"]
shape = SubResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="4"]
stream = ExtResource( 4 )

[node name="Particles2D" type="Particles2D" parent="." index="5"]
emitting = false
amount = 30
explosiveness = 1.0
process_material = SubResource( 3 )

[connection signal="body_entered" from="HarmfulArea" to="." method="_on_HarmfulArea_body_entered"]
[connection signal="body_entered" from="FriendLockArea" to="." method="_on_FriendLockArea_body_entered"]
